dataset1235/2025-2/1153765216/users/641768463/executions/2814675586_208040576.log
== RUN (2025-08-26 19:16:29)
-- CODE: 
preco = float(input())
desconto = (15 / 100)* peco
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = (15 / 100)* peco
                           ^^^^
NameError: name 'peco' is not defined. Did you mean: 'preco'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:59:24)
-- CODE: 
preco = float(input())
precofinal = 15/100 + preco
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.15
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.15
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.15
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.15
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:02:16)
-- CODE: 
preco = float(input())
desconto = 15//100
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:15:29)
-- CODE: 
preco = float(input())
desconto = (15/100)
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.15
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.15
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.15
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.15
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:13:57)
-- CODE: 
preco = float(input("Produto."))
desconto = 15//100
precofinal = (preco + desconto)
print("Produto.":, precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:59:07)
-- CODE: 
preco = float(input())
precofinal = 15/100 * preco
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:14:47)
-- CODE: 
preco = float(input())
desconto = 15/100
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.15
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.15
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.15
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.15
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:58:40)
-- CODE: 
preco = float(input())
precofinal = 15 / 100 * preco
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:00:58)
-- CODE: 
preco = float(input())
desconto = 15/100 
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.15
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.15
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.15
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.15
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:02:38)
-- CODE: 
preco = float(input())
desconto = 15//100
precofinal = (preco - desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:17:24)
-- CODE: 
preco = float(input())
desconto = (15 / 100) * preco
precofinal = (preco + desconto
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:58:39)
-- CODE: 
preco = float(input())
precofinal = 15 / 100 * preco
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:13:58)
-- CODE: 
preco = float(input("Produto."))
desconto = 15//100
precofinal = (preco + desconto)
print("Produto.":, precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 4
    print("Produto.":, precofinal)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:17:28)
-- CODE: 
preco = float(input())
desconto = (15 / 100) * preco
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1380.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
115.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
17.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
11.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
230.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:17:22)
-- CODE: 
preco = float(input())
desconto = (15 / 100) * preco
precofinal = (preco + desconto
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    precofinal = (preco + desconto
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:01:35)
-- CODE: 
preco = float(input())
desconto = 15/100 
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1200.15
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
100.15
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
15.15
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
10.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
200.15
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:16:41)
-- CODE: 
preco = float(input())
desconto = (15 / 100)* preco
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1380.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
115.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
17.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
11.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
230.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:14:08)
-- CODE: 
preco = float(input("Produto."))
desconto = 15//100
precofinal = (preco + desconto)
print("Produto.": precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:01:56)
-- CODE: 
preco = float(input())
desconto = 100/15
precofinal = (preco + desconto)
print(precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1206.6666666666667
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
106.66666666666667
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
21.666666666666668
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
16.666666666666668
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
206.66666666666666
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
26.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:14:06)
-- CODE: 
preco = float(input("Produto."))
desconto = 15//100
precofinal = (preco + desconto)
print("Produto.": precofinal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 4
    print("Produto.": precofinal)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
